--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Spendenaufruf Kipepeo Community Empowerment Program">
   <meta property="og:description" content="Ein persönliches Anliegen von Jonas. Ich würde mich freuen wenn wir dem Projekt helfen können, mehr auf der Seite!">
   <meta property="og:image" content="https://kipepeo.devicezero.de/groupphoto.jpg">
-  <meta property="og:url" content="http://kipepeo.devicezero.de/index.html">
+  <meta property="og:url" content="https://kipepeo.devicezero.de/index.html">
   <meta name="twitter:card" content="summary_large_image">
 
   <link href="https://fonts.googleapis.com/css?family=Lora:700|Merriweather" rel="stylesheet">
