--- a/index.html
+++ b/index.html
@@ -54,13 +54,29 @@
       border-radius: 5px;
       box-shadow: 3px 2px 3px rgba(0,0,0,0.15);
       text-decoration: none;
-      transition: 300ms ease all;
-      font-size: 1rem; 
+      font-weight: bold;
     }
 
-    img {
+    img.fullwidth {
       width: 100%;
       text-align: center;
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 5px;
+    }
+
+    .gallery img {
+      width: 100%;
+    }
+
+    @media only screen and (max-width: 600px) {
+      .gallery { 
+        display: block; 
+        text-align: center;
+      }
     }
 
   </style>
@@ -70,18 +86,24 @@
   <div class="wrapper">
     <h1>Ein herzliches Hallo!</h1>
     <div class="letter">
-      <p>2018 war ein spannendes Jahr für mich. Wie ihr wisst habe ich im Januar meine Zelte in Deutschland abgebrochen und mit mit Rucksack und Laptop in die Welt gezogen. Dabei ging es immer auch darum neue Menschen, neue Kulturen kennen zu lernen und den Horizont zu erweitern. </p>
-      <p>In Kenya habe ich im April einen Tag mit Julius, Jethron und Moses vom Kipepeo Community Empowerment Program verbracht. Sie haben mir gezeigt, mit welche Engagement und welcher Hingabe sie versuchen das Leben der Menschen im Emuhaya District zu verbessern. Mit Schulbildung, Nachhaltigem Wirtschaften, Microfinancing oder auch Computer-Kursen versuchen sie den Leuten ein besseres Leben zu ermöglichen. Wenn man sich mit den Menschen vor Ort unterhält, ist es doch bitter, wie sehr immer grade Bildung und Information immer noch ein Problem sind. Bis heute hat mich dieser eine kleine Einblick sehr beeindruckt. </p>
-      <img src="groupphoto.jpg" alt="">
-      <p>Eins ist mir dadurch sehr ins Bewusstsein gerufen worden: Es ist ein riesiges Privileg in einem Umfeld aufzuwachsen, in dem der Zugang zu Essen, Bildung, Informationen "einfach so" gegeben ist. Das ist für viele Menschen dieser Erde nicht selbstverständlich. In meinem Alltag geht das immer oft unter, sicher kennt das der ein oder andere von euch auch. Ich muss ganz ehrlich gestehen: In den Tagen nach dem Besuch, fiel es mir schwer meiner "normalen" Tätigkeit nachzugehen. Eigentlich will man direkt alles stehen und liegen lassen, und irgendwie helfen.</p>
-      <p>Einige weitere Informationen zum Projekt haben die Jungs auf <a href="http://kipepeo.yolasite.com/">kipepeo.yolasite.com</a> bereits online. Auch an der Webseite sieht man: Mit allen Mitteln wird aus "nichts" "viel" geschaffen. Falls euch noch mehr interessiert oder mein Erfahrungsbericht von dem Tag vor Ort spannend wäre, sprecht mich einfach an! Grade versuchen wir ein kleines Video von der Situation vor Ort zu machen. Bis das fertig wird, wird es sicherlich noch etwas brauchen.</p>
+      <p>2018 war ein spannendes Jahr für mich. Wie ihr wisst, habe ich im Januar meine Zelte in Deutschland abgebrochen und bin mit Rucksack und Laptop in die Welt gezogen. Dabei ging es immer auch darum, neue Menschen, neue Kulturen kennen zu lernen und den Horizont zu erweitern.</p>
+      <p>In Kenya habe ich im April einen Tag mit Julius, Jethron und Moses vom Kipepeo Community Empowerment Program verbracht. Sie haben mir gezeigt, mit welche Engagement und welcher Hingabe sie das Leben der Menschen im Emuhaya District zu verbessern. Mit Schulbildung, nachhaltigem Wirtschaften, Microfinancing oder auch Computer-Kursen versuchen sie vor Ort ein besseres Leben zu schaffen. Wenn man sich mit den Menschen dort unterhält, ist es doch bitter, wie sehr vor Allem Bildung und Information immer noch ein Problem sind. Bis heute hat mich dieser eine kleine Einblick sehr beeindruckt.</p>
+      <img class="fullwidth" src="groupphoto.jpg" alt="">
+      <p>Eines ist mir dadurch sehr ins Bewusstsein gerufen worden: Es ist ein riesiges Privileg in einem Umfeld aufzuwachsen, in dem der Zugang zu Essen, Bildung, Informationen "einfach so" gegeben ist. Das ist für viele Menschen dieser Erde nicht selbstverständlich. In meinem Alltag geht das oft unter, sicher kennt das der ein oder die andere von euch auch. Ich muss ganz ehrlich gestehen: In den Tagen nach dem Besuch, fiel es mir schwer meiner "normalen" Tätigkeit nachzugehen. Eigentlich will man direkt alles stehen und liegen lassen, und irgendwie helfen.</p>
+      <p>Einige weitere Informationen zum Projekt haben die Jungs auf <a href="http://kipepeo.yolasite.com/">kipepeo.yolasite.com</a> bereits online. Auch an der Webseite seht ihr: Mit allen Mitteln wird aus "nichts" "viel" geschaffen. Falls euch noch mehr interessiert oder mein Erfahrungsbericht von dem Tag vor Ort spannend wäre, sprecht mich einfach an! Grade versuchen wir ein kleines Video von der Situation vor Ort zu machen. Bis das fertig wird, wird es sicherlich noch etwas brauchen.</p>
       <p><strong>Nun zum Eigentlichen:</strong><br />
-      Ich würde ich mich sehr, sehr freuen wenn sich der ein oder andere Euro auf den Weg nach Afrika machen könnte. Ich möchte dieses Jahr auf Geschenke zu Geburtstag und Weihnachten (bei mir bekanntlich beides zeitlich recht nah beisammen) verzichten und lieber das Projekt vor Ort unterstützen. Auch weil ich gesehen habe, dass jeder Euro vor Ort hilft und direkt ankommt. Ohne Bürokratie und Intransparenz. </p>
+      Ich würde ich mich sehr, sehr freuen, wenn sich der ein oder andere Euro auf den Weg nach Afrika machen könnte. Ich möchte dieses Jahr auf Geschenke zu Geburtstag und Weihnachten (bei mir bekanntlich beides zeitlich recht nah beisammen) verzichten und lieber das Projekt vor Ort unterstützen. Auch weil ich gesehen habe, dass jeder Euro hilft und ankommt. Ohne Bürokratie und Intransparenz.</p>
       <a class="button" href="https://www.paypal.com/donate/?token=gEAF48nmoby7qhz8wcKtTufWOU0Cp_ghX5mrHPpJF1kZhoFOhLSdjhXSvyllvaMX3bTc20&country.x=KE&locale.x=KE&Z3JncnB0=">Hier könnt ihr spenden</a>
       <small>(Das geht auch ohne PayPal Konto und mit Kreditkarte. Wer sich nicht traut das online zu machen: Melden! Daran soll es bitte nicht scheitern).</small>
 
       <p>Ganz lieben Dank euch!</p>
       <p class="signature">Jonas</p>
+
+      <div class="gallery">
+        <img src="1.jpg" alt="">
+        <img src="2.jpg" alt="">
+        <img src="3.jpg" alt="">
+      </div>
     </div>
     <div class="photo"></div>
   </div>
