--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <p>Einige weitere Informationen zum Projekt haben die Jungs auf <a href="http://kipepeo.yolasite.com/">kipepeo.yolasite.com</a> bereits online. Auch an der Webseite seht ihr: Mit allen Mitteln wird aus "Nichts" "Viel" geschaffen. Falls euch noch mehr interessiert oder mein Erfahrungsbericht von dem Tag vor Ort spannend wäre, sprecht mich einfach an! Gerade versuchen wir ein kleines Video von der Situation vor Ort zu machen. Bis das fertig wird, wird es sicherlich noch etwas brauchen.</p>
       <p><strong>Nun zum Eigentlichen:</strong><br />
       Ich würde ich mich sehr, sehr freuen, wenn sich der ein oder andere Euro auf den Weg nach Afrika machen könnte. Ich möchte dieses Jahr auf Geschenke zu Geburtstag und Weihnachten (bei mir bekanntlich beides zeitlich recht nah beisammen) verzichten und lieber das Projekt vor Ort unterstützen. Auch weil ich gesehen habe, dass jeder Euro hilft und ankommt. Ohne Bürokratie und Intransparenz.</p>
-      <a class="button" href="https://www.paypal.com/donate/?token=gEAF48nmoby7qhz8wcKtTufWOU0Cp_ghX5mrHPpJF1kZhoFOhLSdjhXSvyllvaMX3bTc20&country.x=KE&locale.x=KE&Z3JncnB0=">Hier könnt ihr spenden</a>
+      <a class="button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4RKVZKHFVLD7E">Hier könnt ihr spenden</a>
       <small>(Das geht auch ohne PayPal Konto und mit Kreditkarte. Wer sich nicht traut das online zu machen: Melden! Daran soll es bitte nicht scheitern).</small>
 
       <p>Ganz lieben Dank euch!</p>
